Génération par Fusion de Chemin

--- a/main.ipynb
+++ b/main.ipynb
@@ -17,12 +17,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-13T21:45:19.521600Z",
-     "start_time": "2024-03-13T21:45:19.517593Z"
+     "end_time": "2024-03-13T21:52:46.973730Z",
+     "start_time": "2024-03-13T21:52:46.969026Z"
     }
    },
    "id": "3224a69af396bec5",
-   "execution_count": 194
+   "execution_count": 218
   },
   {
    "cell_type": "code",
@@ -272,26 +272,51 @@
     "            laby.remove_wall(cell, (h - 1, j + 1))\n",
     "                    \n",
     "        return laby\n",
+    "    \n",
+    "    @classmethod\n",
+    "    def gen_fusion(cls, h: int, w: int) -> 'Maze':\n",
+    "        \"\"\"\n",
+    "        Génération d'un labyrinthe de dimensions height x width\n",
+    "        selon la méthode de la fusion de chemin\n",
+    "        :param h: int : hauteur du labyrinthe\n",
+    "        :param w: int : largeur du labyrinthe\n",
+    "        :return: Maze : labyrinthe généré\n",
+    "        \"\"\"\n",
+    "        laby = cls(h, w)\n",
+    "        laby.fill()\n",
+    "        labels = {cell: i for i, cell in enumerate(laby.neighbors)}\n",
+    "        walls = laby.get_walls()\n",
+    "        rd.shuffle(walls)\n",
+    "        for wall in walls:\n",
+    "            c1, c2 = wall\n",
+    "            if labels[c1] != labels[c2]:\n",
+    "                laby.remove_wall(c1, c2)\n",
+    "                label1, label2 = labels[c1], labels[c2]\n",
+    "                for cell in labels:\n",
+    "                    if labels[cell] == label2:\n",
+    "                        labels[cell] = label1\n",
+    "                \n",
+    "        return laby\n",
     "        \n",
     "            "
    ],
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-03-13T21:45:19.707818Z",
-     "start_time": "2024-03-13T21:45:19.671566Z"
+     "end_time": "2024-03-13T21:52:47.105184Z",
+     "start_time": "2024-03-13T21:52:47.070774Z"
     }
    },
    "id": "4913b177",
-   "execution_count": 195
+   "execution_count": 219
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 220,
    "id": "d0cb7487",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-03-13T21:45:19.716628Z",
-     "start_time": "2024-03-13T21:45:19.710818Z"
+     "end_time": "2024-03-13T21:52:47.112171Z",
+     "start_time": "2024-03-13T21:52:47.107185Z"
     }
    },
    "outputs": [
@@ -314,12 +339,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 221,
    "id": "0a27ff12",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-03-13T21:45:19.735976Z",
-     "start_time": "2024-03-13T21:45:19.731645Z"
+     "end_time": "2024-03-13T21:52:47.128794Z",
+     "start_time": "2024-03-13T21:52:47.124113Z"
     }
    },
    "outputs": [
@@ -345,12 +370,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 222,
    "id": "e5ec0ef8",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-03-13T21:45:19.772847Z",
-     "start_time": "2024-03-13T21:45:19.764067Z"
+     "end_time": "2024-03-13T21:52:47.149081Z",
+     "start_time": "2024-03-13T21:52:47.141800Z"
     }
    },
    "outputs": [
@@ -395,12 +420,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 223,
    "id": "e5533653",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-03-13T21:45:19.837905Z",
-     "start_time": "2024-03-13T21:45:19.832517Z"
+     "end_time": "2024-03-13T21:52:47.162101Z",
+     "start_time": "2024-03-13T21:52:47.157600Z"
     }
    },
    "outputs": [
@@ -428,12 +453,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 224,
    "id": "d5b8576c",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-03-13T21:45:19.866520Z",
-     "start_time": "2024-03-13T21:45:19.862487Z"
+     "end_time": "2024-03-13T21:52:47.212081Z",
+     "start_time": "2024-03-13T21:52:47.207095Z"
     }
    },
    "outputs": [
@@ -461,12 +486,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 225,
    "id": "51453914",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-03-13T21:45:19.928278Z",
-     "start_time": "2024-03-13T21:45:19.923613Z"
+     "end_time": "2024-03-13T21:52:47.234859Z",
+     "start_time": "2024-03-13T21:52:47.229918Z"
     }
    },
    "outputs": [
@@ -500,12 +525,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 226,
    "id": "8a7a490d",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-03-13T21:45:19.960782Z",
-     "start_time": "2024-03-13T21:45:19.957279Z"
+     "end_time": "2024-03-13T21:52:47.301268Z",
+     "start_time": "2024-03-13T21:52:47.298454Z"
     }
    },
    "outputs": [],
@@ -515,12 +540,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 227,
    "id": "98548c2a",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-03-13T21:45:20.021979Z",
-     "start_time": "2024-03-13T21:45:20.015263Z"
+     "end_time": "2024-03-13T21:52:47.333200Z",
+     "start_time": "2024-03-13T21:52:47.327672Z"
     }
    },
    "outputs": [
@@ -545,12 +570,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 228,
    "id": "75f360f6",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-03-13T21:45:20.062872Z",
-     "start_time": "2024-03-13T21:45:20.057646Z"
+     "end_time": "2024-03-13T21:52:47.388609Z",
+     "start_time": "2024-03-13T21:52:47.382827Z"
     }
    },
    "outputs": [
@@ -575,12 +600,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 229,
    "id": "f4fa14e0",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-03-13T21:45:20.097727Z",
-     "start_time": "2024-03-13T21:45:20.092984Z"
+     "end_time": "2024-03-13T21:52:47.420502Z",
+     "start_time": "2024-03-13T21:52:47.414670Z"
     }
    },
    "outputs": [
@@ -611,12 +636,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 230,
    "id": "4c77f50d",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-03-13T21:45:20.117961Z",
-     "start_time": "2024-03-13T21:45:20.112981Z"
+     "end_time": "2024-03-13T21:52:47.499930Z",
+     "start_time": "2024-03-13T21:52:47.495166Z"
     }
    },
    "outputs": [
@@ -645,12 +670,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 231,
    "id": "b9483814",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-03-13T21:45:20.138579Z",
-     "start_time": "2024-03-13T21:45:20.133972Z"
+     "end_time": "2024-03-13T21:52:47.531867Z",
+     "start_time": "2024-03-13T21:52:47.524885Z"
     }
    },
    "outputs": [
@@ -706,12 +731,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-13T21:45:20.183358Z",
-     "start_time": "2024-03-13T21:45:20.178525Z"
+     "end_time": "2024-03-13T21:52:47.589807Z",
+     "start_time": "2024-03-13T21:52:47.582895Z"
     }
    },
    "id": "6fb5acaff0d33803",
-   "execution_count": 208
+   "execution_count": 232
   },
   {
    "cell_type": "code",
@@ -741,21 +766,21 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-13T21:45:20.217090Z",
-     "start_time": "2024-03-13T21:45:20.212922Z"
+     "end_time": "2024-03-13T21:52:47.618489Z",
+     "start_time": "2024-03-13T21:52:47.612722Z"
     }
    },
    "id": "c71b15a8ec2d493e",
-   "execution_count": 209
+   "execution_count": 233
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 234,
    "id": "8e7912e8",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-03-13T21:45:20.271460Z",
-     "start_time": "2024-03-13T21:45:20.265763Z"
+     "end_time": "2024-03-13T21:52:47.662804Z",
+     "start_time": "2024-03-13T21:52:47.656004Z"
     }
    },
    "outputs": [
@@ -801,12 +826,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-13T21:45:20.293070Z",
-     "start_time": "2024-03-13T21:45:20.288921Z"
+     "end_time": "2024-03-13T21:52:47.684364Z",
+     "start_time": "2024-03-13T21:52:47.680198Z"
     }
    },
    "id": "383940f20f1be837",
-   "execution_count": 211
+   "execution_count": 235
   },
   {
    "cell_type": "code",
@@ -825,12 +850,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-13T21:45:20.333386Z",
-     "start_time": "2024-03-13T21:45:20.328569Z"
+     "end_time": "2024-03-13T21:52:47.734936Z",
+     "start_time": "2024-03-13T21:52:47.729762Z"
     }
    },
    "id": "7d7e3392f1c01482",
-   "execution_count": 212
+   "execution_count": 236
   },
   {
    "cell_type": "code",
@@ -849,12 +874,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-13T21:45:20.360168Z",
-     "start_time": "2024-03-13T21:45:20.355726Z"
+     "end_time": "2024-03-13T21:52:47.758987Z",
+     "start_time": "2024-03-13T21:52:47.753936Z"
     }
    },
    "id": "70bf1086b29b9453",
-   "execution_count": 213
+   "execution_count": 237
   },
   {
    "cell_type": "markdown",
@@ -904,10 +929,10 @@
       "j 2\n",
       "j 3\n",
       "┏━━━┳━━━┳━━━┳━━━┓\n",
-      "┃       ┃       ┃\n",
-      "┣━━━╋   ╋━━━╋   ┫\n",
       "┃   ┃   ┃   ┃   ┃\n",
       "┣   ╋   ╋   ╋   ┫\n",
+      "┃           ┃   ┃\n",
+      "┣━━━╋━━━╋   ╋   ┫\n",
       "┃   ┃   ┃   ┃   ┃\n",
       "┣   ╋   ╋   ╋   ┫\n",
       "┃               ┃\n",
@@ -922,12 +947,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-13T21:45:20.601426Z",
-     "start_time": "2024-03-13T21:45:20.596429Z"
+     "end_time": "2024-03-13T21:52:47.829841Z",
+     "start_time": "2024-03-13T21:52:47.824202Z"
     }
    },
    "id": "1ef3442a6ba2af27",
-   "execution_count": 214
+   "execution_count": 238
   },
   {
    "cell_type": "code",
@@ -949,12 +974,12 @@
       "j 1\n",
       "j 2\n",
       "┏━━━┳━━━┳━━━┳━━━┓\n",
+      "┃   ┃           ┃\n",
+      "┣   ╋   ╋━━━╋━━━┫\n",
       "┃   ┃   ┃   ┃   ┃\n",
       "┣   ╋   ╋   ╋   ┫\n",
-      "┃       ┃   ┃   ┃\n",
-      "┣━━━╋   ╋   ╋   ┫\n",
-      "┃   ┃   ┃   ┃   ┃\n",
-      "┣   ╋   ╋   ╋   ┫\n",
+      "┃   ┃       ┃   ┃\n",
+      "┣   ╋   ╋━━━╋   ┫\n",
       "┃               ┃\n",
       "┗━━━┻━━━┻━━━┻━━━┛\n"
      ]
@@ -967,26 +992,67 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-13T21:45:29.256621Z",
-     "start_time": "2024-03-13T21:45:29.251679Z"
+     "end_time": "2024-03-13T21:52:47.851277Z",
+     "start_time": "2024-03-13T21:52:47.845324Z"
     }
    },
    "id": "a19f8c8a6f4a892e",
-   "execution_count": 217
+   "execution_count": 239
   },
   {
    "cell_type": "code",
-   "outputs": [],
-   "source": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "┏━━━┳━━━┳━━━┳━━━┳━━━┳━━━┳━━━┳━━━┳━━━┳━━━┳━━━┳━━━┳━━━┳━━━┳━━━┓\n",
+      "┃       ┃       ┃       ┃               ┃                   ┃\n",
+      "┣   ╋   ╋   ╋━━━╋━━━╋   ╋   ╋━━━╋━━━╋━━━╋━━━╋   ╋━━━╋━━━╋   ┫\n",
+      "┃   ┃       ┃               ┃           ┃   ┃           ┃   ┃\n",
+      "┣   ╋━━━╋   ╋   ╋━━━╋   ╋   ╋   ╋   ╋   ╋   ╋━━━╋   ╋━━━╋   ┫\n",
+      "┃       ┃   ┃   ┃       ┃       ┃   ┃   ┃           ┃       ┃\n",
+      "┣   ╋   ╋   ╋   ╋   ╋━━━╋━━━╋━━━╋   ╋━━━╋━━━╋   ╋━━━╋━━━╋━━━┫\n",
+      "┃   ┃   ┃       ┃   ┃               ┃   ┃   ┃           ┃   ┃\n",
+      "┣━━━╋━━━╋━━━╋━━━╋━━━╋━━━╋   ╋━━━╋   ╋   ╋   ╋   ╋━━━╋━━━╋   ┫\n",
+      "┃                           ┃   ┃           ┃               ┃\n",
+      "┣   ╋━━━╋   ╋━━━╋━━━╋   ╋━━━╋   ╋━━━╋━━━╋━━━╋   ╋   ╋━━━╋━━━┫\n",
+      "┃   ┃   ┃   ┃                   ┃   ┃           ┃   ┃       ┃\n",
+      "┣━━━╋   ╋━━━╋━━━╋━━━╋   ╋   ╋━━━╋   ╋   ╋   ╋━━━╋   ╋   ╋   ┫\n",
+      "┃           ┃   ┃   ┃   ┃   ┃       ┃   ┃   ┃       ┃   ┃   ┃\n",
+      "┣━━━╋   ╋   ╋   ╋   ╋   ╋   ╋   ╋━━━╋━━━╋━━━╋   ╋━━━╋   ╋━━━┫\n",
+      "┃       ┃   ┃   ┃   ┃   ┃               ┃               ┃   ┃\n",
+      "┣   ╋━━━╋━━━╋   ╋   ╋   ╋━━━╋   ╋━━━╋━━━╋━━━╋━━━╋   ╋━━━╋   ┫\n",
+      "┃           ┃   ┃       ┃           ┃           ┃       ┃   ┃\n",
+      "┣━━━╋━━━╋   ╋   ╋   ╋━━━╋━━━╋━━━╋   ╋   ╋   ╋   ╋   ╋   ╋   ┫\n",
+      "┃   ┃   ┃       ┃   ┃   ┃   ┃           ┃   ┃   ┃   ┃       ┃\n",
+      "┣   ╋   ╋━━━╋   ╋   ╋   ╋   ╋   ╋━━━╋   ╋━━━╋   ╋   ╋━━━╋━━━┫\n",
+      "┃               ┃           ┃   ┃   ┃   ┃                   ┃\n",
+      "┣   ╋━━━╋   ╋   ╋━━━╋   ╋   ╋━━━╋   ╋   ╋   ╋━━━╋━━━╋━━━╋━━━┫\n",
+      "┃   ┃       ┃           ┃   ┃       ┃   ┃   ┃   ┃   ┃       ┃\n",
+      "┣━━━╋━━━╋   ╋━━━╋   ╋━━━╋   ╋   ╋━━━╋━━━╋   ╋   ╋   ╋   ╋   ┫\n",
+      "┃   ┃   ┃   ┃       ┃   ┃   ┃           ┃               ┃   ┃\n",
+      "┣   ╋   ╋━━━╋   ╋━━━╋   ╋   ╋━━━╋   ╋   ╋━━━╋   ╋   ╋━━━╋   ┫\n",
+      "┃       ┃               ┃           ┃       ┃   ┃   ┃   ┃   ┃\n",
+      "┣   ╋   ╋   ╋━━━╋━━━╋   ╋   ╋━━━╋   ╋━━━╋━━━╋━━━╋   ╋   ╋   ┫\n",
+      "┃   ┃           ┃       ┃       ┃               ┃       ┃   ┃\n",
+      "┗━━━┻━━━┻━━━┻━━━┻━━━┻━━━┻━━━┻━━━┻━━━┻━━━┻━━━┻━━━┻━━━┻━━━┻━━━┛\n"
+     ]
+    }
+   ],
+   "source": [
+    "laby = Maze.gen_fusion(15,15)\n",
+    "print(laby)"
+   ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-13T21:45:20.637878Z",
-     "start_time": "2024-03-13T21:45:20.634702Z"
+     "end_time": "2024-03-13T21:52:47.997300Z",
+     "start_time": "2024-03-13T21:52:47.925628Z"
     }
    },
    "id": "a87cf9f01aa012e2",
-   "execution_count": 215
+   "execution_count": 240
   }
  ],
  "metadata": {
