--- a/main.ipynb
+++ b/main.ipynb
@@ -17,12 +17,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-13T21:52:46.973730Z",
-     "start_time": "2024-03-13T21:52:46.969026Z"
+     "end_time": "2024-03-13T21:59:51.228576Z",
+     "start_time": "2024-03-13T21:59:51.224925Z"
     }
    },
    "id": "3224a69af396bec5",
-   "execution_count": 218
+   "execution_count": 241
   },
   {
    "cell_type": "code",
@@ -222,6 +222,7 @@
     "        \"\"\"\n",
     "        laby = cls(h, w)\n",
     "        laby.fill()\n",
+    "        \n",
     "        for i in range(h):\n",
     "            print('i', i)\n",
     "            for j in range(w):\n",
@@ -250,6 +251,7 @@
     "        \"\"\"\n",
     "        laby = cls(h, w)\n",
     "        laby.fill()\n",
+    "        \n",
     "        for i in range(h - 1):\n",
     "            print('i', i)\n",
     "            sequence = []\n",
@@ -287,6 +289,7 @@
     "        labels = {cell: i for i, cell in enumerate(laby.neighbors)}\n",
     "        walls = laby.get_walls()\n",
     "        rd.shuffle(walls)\n",
+    "        \n",
     "        for wall in walls:\n",
     "            c1, c2 = wall\n",
     "            if labels[c1] != labels[c2]:\n",
@@ -297,26 +300,54 @@
     "                        labels[cell] = label1\n",
     "                \n",
     "        return laby\n",
+    "    \n",
+    "    @classmethod\n",
+    "    def gen_exploration(cls, h: int, w: int) -> 'Maze':\n",
+    "        \"\"\"\n",
+    "        Génération d'un labyrinthe de dimensions height x width\n",
+    "        selon la méthode de l'exploration exhaustive\n",
+    "        :param h: int : hauteur du labyrinthe\n",
+    "        :param w: int : largeur du labyrinthe\n",
+    "        :return: Maze : labyrinthe généré\n",
+    "        \"\"\"\n",
+    "        laby = cls(h, w)\n",
+    "        laby.fill()\n",
+    "        cell = (rd.randint(0, h-1), rd.randint(0, w-1))\n",
+    "        visited = [cell]\n",
+    "        stack = [cell]\n",
+    "        \n",
+    "        while len(stack) != 0:\n",
+    "            cell = stack.pop()\n",
+    "            contiguous = laby.get_contiguous_cells(cell)\n",
+    "            unvisited = [c for c in contiguous if c not in visited]\n",
+    "            if len(unvisited) != 0:\n",
+    "                stack.append(cell)\n",
+    "                next_cell = rd.choice(unvisited)\n",
+    "                laby.remove_wall(cell, next_cell)\n",
+    "                visited.append(next_cell)\n",
+    "                stack.append(next_cell)\n",
+    "                \n",
+    "        return laby\n",
     "        \n",
     "            "
    ],
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-03-13T21:52:47.105184Z",
-     "start_time": "2024-03-13T21:52:47.070774Z"
+     "end_time": "2024-03-13T21:59:51.405156Z",
+     "start_time": "2024-03-13T21:59:51.365854Z"
     }
    },
    "id": "4913b177",
-   "execution_count": 219
+   "execution_count": 242
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 243,
    "id": "d0cb7487",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-03-13T21:52:47.112171Z",
-     "start_time": "2024-03-13T21:52:47.107185Z"
+     "end_time": "2024-03-13T21:59:51.428192Z",
+     "start_time": "2024-03-13T21:59:51.423828Z"
     }
    },
    "outputs": [
@@ -339,12 +370,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 244,
    "id": "0a27ff12",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-03-13T21:52:47.128794Z",
-     "start_time": "2024-03-13T21:52:47.124113Z"
+     "end_time": "2024-03-13T21:59:51.485909Z",
+     "start_time": "2024-03-13T21:59:51.480258Z"
     }
    },
    "outputs": [
@@ -370,12 +401,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 245,
    "id": "e5ec0ef8",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-03-13T21:52:47.149081Z",
-     "start_time": "2024-03-13T21:52:47.141800Z"
+     "end_time": "2024-03-13T21:59:51.551002Z",
+     "start_time": "2024-03-13T21:59:51.543892Z"
     }
    },
    "outputs": [
@@ -420,12 +451,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 246,
    "id": "e5533653",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-03-13T21:52:47.162101Z",
-     "start_time": "2024-03-13T21:52:47.157600Z"
+     "end_time": "2024-03-13T21:59:51.572353Z",
+     "start_time": "2024-03-13T21:59:51.566862Z"
     }
    },
    "outputs": [
@@ -453,12 +484,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 247,
    "id": "d5b8576c",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-03-13T21:52:47.212081Z",
-     "start_time": "2024-03-13T21:52:47.207095Z"
+     "end_time": "2024-03-13T21:59:51.634153Z",
+     "start_time": "2024-03-13T21:59:51.629022Z"
     }
    },
    "outputs": [
@@ -486,12 +517,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 248,
    "id": "51453914",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-03-13T21:52:47.234859Z",
-     "start_time": "2024-03-13T21:52:47.229918Z"
+     "end_time": "2024-03-13T21:59:51.662411Z",
+     "start_time": "2024-03-13T21:59:51.656342Z"
     }
    },
    "outputs": [
@@ -525,12 +556,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 249,
    "id": "8a7a490d",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-03-13T21:52:47.301268Z",
-     "start_time": "2024-03-13T21:52:47.298454Z"
+     "end_time": "2024-03-13T21:59:51.711114Z",
+     "start_time": "2024-03-13T21:59:51.707193Z"
     }
    },
    "outputs": [],
@@ -540,12 +571,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 250,
    "id": "98548c2a",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-03-13T21:52:47.333200Z",
-     "start_time": "2024-03-13T21:52:47.327672Z"
+     "end_time": "2024-03-13T21:59:51.734134Z",
+     "start_time": "2024-03-13T21:59:51.727944Z"
     }
    },
    "outputs": [
@@ -570,12 +601,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 251,
    "id": "75f360f6",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-03-13T21:52:47.388609Z",
-     "start_time": "2024-03-13T21:52:47.382827Z"
+     "end_time": "2024-03-13T21:59:51.757308Z",
+     "start_time": "2024-03-13T21:59:51.752366Z"
     }
    },
    "outputs": [
@@ -600,12 +631,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 252,
    "id": "f4fa14e0",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-03-13T21:52:47.420502Z",
-     "start_time": "2024-03-13T21:52:47.414670Z"
+     "end_time": "2024-03-13T21:59:51.813501Z",
+     "start_time": "2024-03-13T21:59:51.808858Z"
     }
    },
    "outputs": [
@@ -636,12 +667,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 253,
    "id": "4c77f50d",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-03-13T21:52:47.499930Z",
-     "start_time": "2024-03-13T21:52:47.495166Z"
+     "end_time": "2024-03-13T21:59:51.865800Z",
+     "start_time": "2024-03-13T21:59:51.860877Z"
     }
    },
    "outputs": [
@@ -670,12 +701,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": 254,
    "id": "b9483814",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-03-13T21:52:47.531867Z",
-     "start_time": "2024-03-13T21:52:47.524885Z"
+     "end_time": "2024-03-13T21:59:51.914998Z",
+     "start_time": "2024-03-13T21:59:51.909001Z"
     }
    },
    "outputs": [
@@ -731,12 +762,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-13T21:52:47.589807Z",
-     "start_time": "2024-03-13T21:52:47.582895Z"
+     "end_time": "2024-03-13T21:59:51.958354Z",
+     "start_time": "2024-03-13T21:59:51.954070Z"
     }
    },
    "id": "6fb5acaff0d33803",
-   "execution_count": 232
+   "execution_count": 255
   },
   {
    "cell_type": "code",
@@ -766,21 +797,21 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-13T21:52:47.618489Z",
-     "start_time": "2024-03-13T21:52:47.612722Z"
+     "end_time": "2024-03-13T21:59:52.000041Z",
+     "start_time": "2024-03-13T21:59:51.995287Z"
     }
    },
    "id": "c71b15a8ec2d493e",
-   "execution_count": 233
+   "execution_count": 256
   },
   {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": 257,
    "id": "8e7912e8",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-03-13T21:52:47.662804Z",
-     "start_time": "2024-03-13T21:52:47.656004Z"
+     "end_time": "2024-03-13T21:59:52.025997Z",
+     "start_time": "2024-03-13T21:59:52.019912Z"
     }
    },
    "outputs": [
@@ -826,12 +857,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-13T21:52:47.684364Z",
-     "start_time": "2024-03-13T21:52:47.680198Z"
+     "end_time": "2024-03-13T21:59:52.077684Z",
+     "start_time": "2024-03-13T21:59:52.072612Z"
     }
    },
    "id": "383940f20f1be837",
-   "execution_count": 235
+   "execution_count": 258
   },
   {
    "cell_type": "code",
@@ -850,12 +881,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-13T21:52:47.734936Z",
-     "start_time": "2024-03-13T21:52:47.729762Z"
+     "end_time": "2024-03-13T21:59:52.096328Z",
+     "start_time": "2024-03-13T21:59:52.091861Z"
     }
    },
    "id": "7d7e3392f1c01482",
-   "execution_count": 236
+   "execution_count": 259
   },
   {
    "cell_type": "code",
@@ -874,12 +905,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-13T21:52:47.758987Z",
-     "start_time": "2024-03-13T21:52:47.753936Z"
+     "end_time": "2024-03-13T21:59:52.110852Z",
+     "start_time": "2024-03-13T21:59:52.107069Z"
     }
    },
    "id": "70bf1086b29b9453",
-   "execution_count": 237
+   "execution_count": 260
   },
   {
    "cell_type": "markdown",
@@ -929,12 +960,12 @@
       "j 2\n",
       "j 3\n",
       "┏━━━┳━━━┳━━━┳━━━┓\n",
-      "┃   ┃   ┃   ┃   ┃\n",
-      "┣   ╋   ╋   ╋   ┫\n",
-      "┃           ┃   ┃\n",
-      "┣━━━╋━━━╋   ╋   ┫\n",
-      "┃   ┃   ┃   ┃   ┃\n",
-      "┣   ╋   ╋   ╋   ┫\n",
+      "┃   ┃   ┃       ┃\n",
+      "┣   ╋   ╋━━━╋   ┫\n",
+      "┃   ┃           ┃\n",
+      "┣   ╋━━━╋━━━╋   ┫\n",
+      "┃               ┃\n",
+      "┣━━━╋━━━╋━━━╋   ┫\n",
       "┃               ┃\n",
       "┗━━━┻━━━┻━━━┻━━━┛\n"
      ]
@@ -947,12 +978,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-13T21:52:47.829841Z",
-     "start_time": "2024-03-13T21:52:47.824202Z"
+     "end_time": "2024-03-13T21:59:52.154453Z",
+     "start_time": "2024-03-13T21:59:52.148923Z"
     }
    },
    "id": "1ef3442a6ba2af27",
-   "execution_count": 238
+   "execution_count": 261
   },
   {
    "cell_type": "code",
@@ -974,12 +1005,12 @@
       "j 1\n",
       "j 2\n",
       "┏━━━┳━━━┳━━━┳━━━┓\n",
-      "┃   ┃           ┃\n",
-      "┣   ╋   ╋━━━╋━━━┫\n",
-      "┃   ┃   ┃   ┃   ┃\n",
-      "┣   ╋   ╋   ╋   ┫\n",
+      "┃   ┃   ┃       ┃\n",
+      "┣   ╋   ╋   ╋━━━┫\n",
       "┃   ┃       ┃   ┃\n",
-      "┣   ╋   ╋━━━╋   ┫\n",
+      "┣   ╋━━━╋   ╋   ┫\n",
+      "┃           ┃   ┃\n",
+      "┣━━━╋━━━╋   ╋   ┫\n",
       "┃               ┃\n",
       "┗━━━┻━━━┻━━━┻━━━┛\n"
      ]
@@ -992,12 +1023,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-13T21:52:47.851277Z",
-     "start_time": "2024-03-13T21:52:47.845324Z"
+     "end_time": "2024-03-13T21:59:52.174049Z",
+     "start_time": "2024-03-13T21:59:52.169266Z"
     }
    },
    "id": "a19f8c8a6f4a892e",
-   "execution_count": 239
+   "execution_count": 262
   },
   {
    "cell_type": "code",
@@ -1007,35 +1038,35 @@
      "output_type": "stream",
      "text": [
       "┏━━━┳━━━┳━━━┳━━━┳━━━┳━━━┳━━━┳━━━┳━━━┳━━━┳━━━┳━━━┳━━━┳━━━┳━━━┓\n",
-      "┃       ┃       ┃       ┃               ┃                   ┃\n",
-      "┣   ╋   ╋   ╋━━━╋━━━╋   ╋   ╋━━━╋━━━╋━━━╋━━━╋   ╋━━━╋━━━╋   ┫\n",
-      "┃   ┃       ┃               ┃           ┃   ┃           ┃   ┃\n",
-      "┣   ╋━━━╋   ╋   ╋━━━╋   ╋   ╋   ╋   ╋   ╋   ╋━━━╋   ╋━━━╋   ┫\n",
-      "┃       ┃   ┃   ┃       ┃       ┃   ┃   ┃           ┃       ┃\n",
-      "┣   ╋   ╋   ╋   ╋   ╋━━━╋━━━╋━━━╋   ╋━━━╋━━━╋   ╋━━━╋━━━╋━━━┫\n",
-      "┃   ┃   ┃       ┃   ┃               ┃   ┃   ┃           ┃   ┃\n",
-      "┣━━━╋━━━╋━━━╋━━━╋━━━╋━━━╋   ╋━━━╋   ╋   ╋   ╋   ╋━━━╋━━━╋   ┫\n",
-      "┃                           ┃   ┃           ┃               ┃\n",
-      "┣   ╋━━━╋   ╋━━━╋━━━╋   ╋━━━╋   ╋━━━╋━━━╋━━━╋   ╋   ╋━━━╋━━━┫\n",
-      "┃   ┃   ┃   ┃                   ┃   ┃           ┃   ┃       ┃\n",
-      "┣━━━╋   ╋━━━╋━━━╋━━━╋   ╋   ╋━━━╋   ╋   ╋   ╋━━━╋   ╋   ╋   ┫\n",
-      "┃           ┃   ┃   ┃   ┃   ┃       ┃   ┃   ┃       ┃   ┃   ┃\n",
-      "┣━━━╋   ╋   ╋   ╋   ╋   ╋   ╋   ╋━━━╋━━━╋━━━╋   ╋━━━╋   ╋━━━┫\n",
-      "┃       ┃   ┃   ┃   ┃   ┃               ┃               ┃   ┃\n",
-      "┣   ╋━━━╋━━━╋   ╋   ╋   ╋━━━╋   ╋━━━╋━━━╋━━━╋━━━╋   ╋━━━╋   ┫\n",
-      "┃           ┃   ┃       ┃           ┃           ┃       ┃   ┃\n",
-      "┣━━━╋━━━╋   ╋   ╋   ╋━━━╋━━━╋━━━╋   ╋   ╋   ╋   ╋   ╋   ╋   ┫\n",
-      "┃   ┃   ┃       ┃   ┃   ┃   ┃           ┃   ┃   ┃   ┃       ┃\n",
-      "┣   ╋   ╋━━━╋   ╋   ╋   ╋   ╋   ╋━━━╋   ╋━━━╋   ╋   ╋━━━╋━━━┫\n",
-      "┃               ┃           ┃   ┃   ┃   ┃                   ┃\n",
-      "┣   ╋━━━╋   ╋   ╋━━━╋   ╋   ╋━━━╋   ╋   ╋   ╋━━━╋━━━╋━━━╋━━━┫\n",
-      "┃   ┃       ┃           ┃   ┃       ┃   ┃   ┃   ┃   ┃       ┃\n",
-      "┣━━━╋━━━╋   ╋━━━╋   ╋━━━╋   ╋   ╋━━━╋━━━╋   ╋   ╋   ╋   ╋   ┫\n",
-      "┃   ┃   ┃   ┃       ┃   ┃   ┃           ┃               ┃   ┃\n",
-      "┣   ╋   ╋━━━╋   ╋━━━╋   ╋   ╋━━━╋   ╋   ╋━━━╋   ╋   ╋━━━╋   ┫\n",
-      "┃       ┃               ┃           ┃       ┃   ┃   ┃   ┃   ┃\n",
-      "┣   ╋   ╋   ╋━━━╋━━━╋   ╋   ╋━━━╋   ╋━━━╋━━━╋━━━╋   ╋   ╋   ┫\n",
-      "┃   ┃           ┃       ┃       ┃               ┃       ┃   ┃\n",
+      "┃       ┃   ┃       ┃               ┃       ┃   ┃   ┃       ┃\n",
+      "┣   ╋━━━╋   ╋   ╋━━━╋━━━╋━━━╋   ╋━━━╋   ╋━━━╋   ╋   ╋━━━╋   ┫\n",
+      "┃   ┃       ┃       ┃                   ┃                   ┃\n",
+      "┣   ╋   ╋   ╋━━━╋   ╋━━━╋   ╋   ╋━━━╋━━━╋   ╋━━━╋━━━╋━━━╋━━━┫\n",
+      "┃       ┃               ┃   ┃               ┃   ┃           ┃\n",
+      "┣   ╋━━━╋   ╋━━━╋━━━╋   ╋   ╋━━━╋━━━╋   ╋   ╋   ╋   ╋   ╋   ┫\n",
+      "┃       ┃       ┃               ┃       ┃   ┃       ┃   ┃   ┃\n",
+      "┣━━━╋   ╋   ╋━━━╋   ╋━━━╋   ╋━━━╋   ╋━━━╋━━━╋━━━╋   ╋━━━╋   ┫\n",
+      "┃       ┃       ┃       ┃       ┃       ┃               ┃   ┃\n",
+      "┣   ╋━━━╋━━━╋━━━╋   ╋   ╋━━━╋   ╋━━━╋   ╋━━━╋   ╋━━━╋━━━╋━━━┫\n",
+      "┃   ┃       ┃   ┃   ┃   ┃           ┃   ┃   ┃               ┃\n",
+      "┣━━━╋   ╋━━━╋   ╋   ╋━━━╋━━━╋   ╋━━━╋   ╋   ╋   ╋   ╋━━━╋━━━┫\n",
+      "┃               ┃       ┃           ┃   ┃       ┃       ┃   ┃\n",
+      "┣   ╋━━━╋━━━╋   ╋   ╋━━━╋━━━╋━━━╋━━━╋   ╋━━━╋━━━╋   ╋   ╋   ┫\n",
+      "┃       ┃       ┃       ┃   ┃                   ┃   ┃       ┃\n",
+      "┣━━━╋━━━╋━━━╋   ╋━━━╋   ╋   ╋━━━╋━━━╋   ╋━━━╋━━━╋━━━╋   ╋   ┫\n",
+      "┃           ┃       ┃   ┃       ┃           ┃           ┃   ┃\n",
+      "┣━━━╋━━━╋   ╋━━━╋   ╋━━━╋━━━╋   ╋━━━╋━━━╋   ╋   ╋━━━╋━━━╋━━━┫\n",
+      "┃   ┃       ┃               ┃                       ┃   ┃   ┃\n",
+      "┣   ╋   ╋   ╋━━━╋   ╋━━━╋   ╋━━━╋━━━╋   ╋   ╋━━━╋   ╋   ╋   ┫\n",
+      "┃       ┃   ┃   ┃       ┃       ┃       ┃   ┃               ┃\n",
+      "┣   ╋   ╋   ╋   ╋   ╋━━━╋   ╋   ╋━━━╋━━━╋   ╋━━━╋━━━╋━━━╋━━━┫\n",
+      "┃   ┃   ┃               ┃   ┃       ┃   ┃                   ┃\n",
+      "┣━━━╋   ╋━━━╋   ╋━━━╋   ╋   ╋━━━╋━━━╋   ╋━━━╋   ╋   ╋━━━╋━━━┫\n",
+      "┃       ┃           ┃   ┃   ┃       ┃       ┃   ┃           ┃\n",
+      "┣━━━╋   ╋━━━╋   ╋━━━╋   ╋━━━╋   ╋━━━╋   ╋━━━╋━━━╋━━━╋━━━╋   ┫\n",
+      "┃       ┃       ┃       ┃   ┃                               ┃\n",
+      "┣━━━╋   ╋━━━╋━━━╋━━━╋   ╋   ╋   ╋━━━╋   ╋━━━╋━━━╋   ╋━━━╋   ┫\n",
+      "┃                   ┃               ┃       ┃           ┃   ┃\n",
       "┗━━━┻━━━┻━━━┻━━━┻━━━┻━━━┻━━━┻━━━┻━━━┻━━━┻━━━┻━━━┻━━━┻━━━┻━━━┛\n"
      ]
     }
@@ -1047,12 +1078,76 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-13T21:52:47.997300Z",
-     "start_time": "2024-03-13T21:52:47.925628Z"
+     "end_time": "2024-03-13T21:59:56.523131Z",
+     "start_time": "2024-03-13T21:59:56.483898Z"
     }
    },
    "id": "a87cf9f01aa012e2",
-   "execution_count": 240
+   "execution_count": 264
+  },
+  {
+   "cell_type": "code",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "┏━━━┳━━━┳━━━┳━━━┳━━━┳━━━┳━━━┳━━━┳━━━┳━━━┳━━━┳━━━┳━━━┳━━━┳━━━┓\n",
+      "┃   ┃               ┃                                       ┃\n",
+      "┣   ╋   ╋━━━╋   ╋━━━╋   ╋━━━╋━━━╋━━━╋━━━╋━━━╋   ╋━━━╋━━━╋   ┫\n",
+      "┃   ┃       ┃       ┃   ┃       ┃   ┃       ┃   ┃       ┃   ┃\n",
+      "┣   ╋   ╋━━━╋━━━╋   ╋   ╋   ╋   ╋   ╋   ╋   ╋   ╋   ╋   ╋   ┫\n",
+      "┃       ┃           ┃   ┃   ┃   ┃   ┃   ┃       ┃   ┃   ┃   ┃\n",
+      "┣   ╋━━━╋   ╋━━━╋   ╋   ╋   ╋   ╋   ╋   ╋   ╋━━━╋   ╋   ╋━━━┫\n",
+      "┃   ┃   ┃   ┃       ┃       ┃       ┃   ┃   ┃       ┃       ┃\n",
+      "┣   ╋   ╋   ╋━━━╋   ╋━━━╋━━━╋━━━╋   ╋   ╋━━━╋   ╋━━━╋━━━╋   ┫\n",
+      "┃       ┃       ┃       ┃       ┃   ┃           ┃   ┃       ┃\n",
+      "┣━━━╋   ╋━━━╋   ╋━━━╋   ╋━━━╋   ╋   ╋━━━╋━━━╋━━━╋   ╋   ╋   ┫\n",
+      "┃   ┃   ┃   ┃   ┃           ┃   ┃       ┃           ┃   ┃   ┃\n",
+      "┣   ╋   ╋   ╋   ╋━━━╋━━━╋   ╋   ╋━━━╋   ╋━━━╋   ╋   ╋   ╋━━━┫\n",
+      "┃           ┃       ┃           ┃       ┃       ┃   ┃       ┃\n",
+      "┣   ╋━━━╋━━━╋━━━╋   ╋━━━╋━━━╋   ╋   ╋━━━╋   ╋━━━╋   ╋━━━╋   ┫\n",
+      "┃   ┃           ┃       ┃       ┃           ┃       ┃       ┃\n",
+      "┣━━━╋   ╋━━━╋   ╋━━━╋   ╋━━━╋━━━╋━━━╋━━━╋━━━╋   ╋━━━╋━━━╋━━━┫\n",
+      "┃       ┃   ┃       ┃   ┃           ┃       ┃   ┃           ┃\n",
+      "┣   ╋━━━╋   ╋━━━╋   ╋   ╋   ╋━━━╋   ╋   ╋   ╋   ╋   ╋━━━╋   ┫\n",
+      "┃       ┃               ┃       ┃       ┃       ┃   ┃   ┃   ┃\n",
+      "┣   ╋   ╋   ╋━━━╋━━━╋━━━╋━━━╋   ╋━━━╋━━━╋━━━╋━━━╋   ╋   ╋   ┫\n",
+      "┃   ┃   ┃   ┃   ┃               ┃           ┃           ┃   ┃\n",
+      "┣━━━╋   ╋   ╋   ╋   ╋━━━╋━━━╋━━━╋━━━╋   ╋━━━╋   ╋━━━╋━━━╋   ┫\n",
+      "┃       ┃       ┃   ┃   ┃           ┃           ┃           ┃\n",
+      "┣   ╋━━━╋━━━╋━━━╋   ╋   ╋   ╋   ╋   ╋   ╋━━━╋━━━╋   ╋━━━╋   ┫\n",
+      "┃   ┃               ┃       ┃   ┃   ┃   ┃       ┃       ┃   ┃\n",
+      "┣   ╋   ╋━━━╋━━━╋━━━╋━━━╋━━━╋   ╋   ╋━━━╋   ╋   ╋━━━╋   ╋━━━┫\n",
+      "┃       ┃               ┃       ┃   ┃       ┃       ┃       ┃\n",
+      "┣   ╋━━━╋━━━╋━━━╋   ╋   ╋   ╋━━━╋   ╋   ╋━━━╋━━━╋   ╋━━━╋   ┫\n",
+      "┃                   ┃       ┃           ┃                   ┃\n",
+      "┗━━━┻━━━┻━━━┻━━━┻━━━┻━━━┻━━━┻━━━┻━━━┻━━━┻━━━┻━━━┻━━━┻━━━┻━━━┛\n"
+     ]
+    }
+   ],
+   "source": [
+    "laby = Maze.gen_exploration(15,15)\n",
+    "print(laby)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-03-13T22:00:01.526959Z",
+     "start_time": "2024-03-13T22:00:01.347479Z"
+    }
+   },
+   "id": "83bc34a2d6739e8c",
+   "execution_count": 265
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "3b19757125ef27f2"
   }
  ],
  "metadata": {
