--- a/main.ipynb
+++ b/main.ipynb
@@ -339,14 +339,10 @@
     "    @classmethod\n",
     "    def gen_wilson(cls, h: int, w: int) -> 'Maze':\n",
     "        \"\"\"\n",
-    "        Choisir une cellule au hasard sur la grille et la marquer\n",
-    "        Tant qu’il reste des cellules non marquées :\n",
-    "            Choisir une cellule de départ au hasard, parmi les cellules non marquées\n",
-    "            Effectuer une marche aléatoire jusqu’à ce qu’une cellule marquée soit atteinte (en cas de boucle, si la tête du snake se mord la queue, « couper » la boucle formée [autrement dit, supprimer toutes étapes depuis le précédent passage])\n",
-    "            Marquer chaque cellule du chemin, et casser tous les murs rencontrés, jusqu’à la cellule marquée\n",
-    "        :param h: \n",
-    "        :param w: \n",
-    "        :return: \n",
+    "        Génération d'un labyrinthe de dimensions height x width selon la méthode de Wilson\n",
+    "        :param h: int : hauteur du labyrinthe\n",
+    "        :param w: int : largeur du labyrinthe\n",
+    "        :return: Maze : labyrinthe généré\n",
     "        \"\"\"\n",
     "        \"\"\"\n",
     "        Génération d'un labyrinthe de dimensions height x width\n",
@@ -422,6 +418,12 @@
     "        return txt\n",
     "    \n",
     "    def solve_dfs(self, start, stop):\n",
+    "        \"\"\"\n",
+    "        Résolution du labyrinthe par la méthode de la recherche en profondeur\n",
+    "        :param start: tuple : Cellule de départ\n",
+    "        :param stop: tuple : Cellule d'arrivée\n",
+    "        :return: list[tuple] : Chemin de la cellule de départ à la cellule d'arrivée\n",
+    "        \"\"\"\n",
     "        stack = [start]\n",
     "        unvisited = [(i, j) for i in range(self.height) for j in range(self.width)]\n",
     "        unvisited.remove(start)\n",
@@ -449,6 +451,12 @@
     "        return path\n",
     "    \n",
     "    def solve_bfs(self, start, stop):\n",
+    "        \"\"\"\n",
+    "        Résolution du labyrinthe par la méthode de la recherche en largeur\n",
+    "        :param start: tuple : Cellule de départ\n",
+    "        :param stop: tuple : Cellule d'arrivée\n",
+    "        :return: list[tuple] : Chemin de la cellule de départ à la cellule d'arrivée\n",
+    "        \"\"\"\n",
     "        queue = [start]\n",
     "        unvisited = [(i, j) for i in range(self.height) for j in range(self.width)]\n",
     "        unvisited.remove(start)\n",
@@ -477,11 +485,10 @@
     "    \n",
     "    def solve_rhr(self, start, stop):\n",
     "        \"\"\"\n",
-    "        L’algorithme, bien connu, dit « de la main droite » peut-être vu comme une recherche « en profondeur d’abord » mais sans vision globale du labyrinthe. C’est la situation dans laquelle serait un individu qu’on abandonnerait dans un labyrinthe et qui devrait trouver la sortie.\n",
-    "        Implémentez cet algorithme dans une méthode d’instance solve_rhr(start, stop) qui retourne le chemin trouvé pour aller de start à stop.\n",
-    "        :param start: \n",
-    "        :param stop: \n",
-    "        :return: \n",
+    "        Résolution du labyrinthe par la méthode de la main droite\n",
+    "        :param start: tuple : Cellule de départ\n",
+    "        :param stop: tuple : Cellule d'arrivée\n",
+    "        :return: list[tuple] : Chemin de la cellule de départ à la cellule d'arrivée\n",
     "        \"\"\"\n",
     "        finish = False\n",
     "        path = [start]\n",
@@ -1126,13 +1133,23 @@
    "execution_count": 21
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "# 7 Évaluation"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "404353c8ef8ceb6e"
+  },
+  {
    "cell_type": "code",
    "outputs": [],
    "source": [],
    "metadata": {
     "collapsed": false
    },
-   "id": "9bcf4a569d4b858c"
+   "id": "3b0d7e954698768"
   }
  ],
  "metadata": {
